--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <link rel="canonical" href="https://nathanrooy.github.io/">
 
         <!-- Meta (general) -->
-        <meta name="author" content="Nathan Rooy">
-        <meta name="copyright" content="Nathan A. Rooy">
+        <meta name="author" content="Vinh Lê">
+        <meta name="copyright" content="Vinh Lê">
         <meta name="description" content="a collection of random projects">
         <meta name="keywords" content="Python, tutorials, machine learning, deep learning, natural language processing, evolutionary optimization, urban design, mobility, geospatial analysis, data science, web scraping, Cincinnati">
         <meta name="language" content="en">
