--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <header id="site-header">
     <div class="wrap">
         <span>
-            <h1>Nathan Rooy</h1>
+            <h1>Vinh Lê Blog</h1>
             <hr size="10">
             <a href="/about/">About</a>
             <a href="mailto:nathanrooy@gmail.com?Subject=githubpage">Contact</a>
@@ -195,7 +195,7 @@
     <footer class="site-footer">
 
 <center>
-    &copy; 2019  <a href="/about">Nathan A. Rooy</a>.
+    &copy; 2019  <a href="/about">Vinh Lê</a>.
     <br>
     Built with <a target="_blank" href="http://jekyllrb.com" rel="nofollow">Jekyll</a>.
     Powered by <a target="_blank" href="http://www.github.com">GitHub</a>
