--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Vinh Lê Blog</title>
         <link rel="canonical" href="https://nathanrooy.github.io/">
 
         <!-- Meta (general) -->
