--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Vinh Lê Blog</title>
         <link rel="canonical" href="https://ldvinhdhd.github.io/">
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="assets/css/style.css" />
 
         <!-- Meta (general) -->
         <meta name="author" content="Vinh Lê">
@@ -241,5 +241,5 @@
 </footer>
 
     </body>
-	<script type="text/javascript" src="cd.js"></script>
+	<script type="text/javascript" src="assets/js/cd.js"></script>
 </html>
