--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
         <span>
             <h1>Vinh Lê Blog</h1>
             <hr size="10">
-            <a href="/about/">About</a>
-            <a href="mailto:nathanrooy@gmail.com?Subject=githubpage">Contact</a>
+            <a href="/about/">Liên hệ</a>
             <a href="/">Home</a>
         </span>
     </div>
@@ -129,7 +128,7 @@
 
    
     
-    <h1>Tutorials</h1>
+    <!--<h1>Tutorials</h1>
     <hr>
     <ul>
         <li>
@@ -188,8 +187,9 @@
         <li>
             <a href="/posts/2016-02-03/chili-regions-of-cincinnati/">Chili Regions of Cincinnati</a>
         </li>        
-    </ul>
-	<h1>Countdown Tết Nguyên Đán</h1>
+    </ul>-->
+	<h1>Countdown Tết Nguyên Đán 2020</h1>
+	<hr>
 	<!--Countdown-->
 	<div class="countdown" id="js-countdown">
 		<div class="countdown__item countdown__item--large">
