--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Vinh Lê Blog</title>
         <link rel="canonical" href="https://ldvinhdhd.github.io/">
-		<link rel="stylesheet" href="assets/css/style.css" />
-
+		
         <!-- Meta (general) -->
         <meta name="author" content="Vinh Lê">
         <meta name="copyright" content="Vinh Lê">
@@ -33,6 +32,7 @@
         
         <!-- For all browsers -->
         <link rel="stylesheet" href="/assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/style.css">
 
         <!-- Favicon -->
         <link rel="shortcut icon" href="/favicon.png">
