--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta http-equiv="Refresh" content="0;URL=https://www.yourdomainname.com">
+	<meta http-equiv="Refresh" content="0;URL=https://vinhle.xyz">
         <title>Vinh Lê Blog</title>
         <link rel="canonical" href="https://vinhle.xyz/">
 		
