--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
         <!-- Meta (general) -->
         <meta name="author" content="Vinh Lê">
         <meta name="copyright" content="Vinh Lê">
-        <meta name="description" content="a collection of random projects">
+        <meta name="description" content="A  Blog from ldvinhdhd">
         <meta name="keywords" content="Vinh Lee, Vinh Lê, Vinh Lê Blog, Vinh Le Blog, Vinh Lee Blog">
         <meta name="language" content="en">
         <meta name="viewport" content="width=device-width">
         
         <!-- Meta (Twitter) -->
         <meta name="twitter:card" content="https://vinhle.xyz">
-        <meta name="twitter:description" content="a collection of random projects">
+        <meta name="twitter:description" content="A  Blog from ldvinhdhd">
         <meta name="twitter:title" content="vinhle.xyz">
         <meta name="twitter:image" content="">
         
         <!-- Open Graph -->
-        <meta property="og:description" content="a collection of random projects">
+        <meta property="og:description" content="A  Blog from ldvinhdhd">
         <meta property="og:image" content="">
         <meta property="og:locale" content="en_US">
         <meta property="og:site_name" content="vinhle.xyz">
@@ -67,10 +67,10 @@
 
     <div class="grid_container">
 
-        <div class="grid_item item_1 width--2" style="background-image: url(images/home/traffic-tracker-close-up.jpg)">
-            <a class="content" href="#">
+        <div class="grid_item item_1 width--2" style="background-image: url(images/home/bg1.jpg)">
+            <a class="content" href="posts/2019-10-31/">
                 <div class="content-inside">
-                    <p>Loading... </p>
+                    <p>Test Post</p>
                 </div>
             </a>
         </div>
