--- a/404.html
+++ b/404.html
@@ -53,8 +53,7 @@
         <span>
             <h1>Vinh Lê Blog</h1>
             <hr size="10">
-            <a href="/about/">About</a>
-            <a href="mailto:nathanrooy@gmail.com?Subject=githubpage">Contact</a>
+            <a href="/about/">Liên hệ</a>
             <a href="/">Home</a>
         </span>
     </div>
