--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
       <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta property="og:image" content="favicon.png">
 	<title>Vinh Lê Blog</title>
         <link rel="canonical" href="https://vinhle.xyz/">
 		
