--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta property="og:image" content="favicon.png">
-	<title>Vinh Lê Blog</title>
+		<title>Vinh Lê Blog</title>
+		<meta http-equiv="refresh" content="0; URL=https://vinhle.xyz/">
         <link rel="canonical" href="https://vinhle.xyz/">
 		
         <!-- Meta (general) -->
