--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,12 @@
 <html>
 
       <head>
+	  <script>
+		var loc = window.location.href+'';
+		if (loc.indexOf('http://')==0){
+		window.location.href = loc.replace('http://','https://');
+		}
+		</script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
