--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="wrap">
 	<div id="home-page">
     
-    <h1>Projects</h1>
+    <h1>Bài viết mới nhất</h1>
 
     <div class="grid_container">
 
