--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@
 		</script>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Liên Hệ</title>
         <link rel="canonical" href="about/">
 
         <!-- Meta (general) -->
