--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="grid_item item_1 width--2" style="background-image: url(images/home/bg1.jpg)">
             <a class="content" href="posts/2019-10-31/">
                 <div class="content-inside">
-                    <p>Test Post</p>
+                    <p>Trine 1 - Game hay 2 người chơi</p>
                 </div>
             </a>
         </div>
