--- a/index.html
+++ b/index.html
@@ -161,6 +161,12 @@
 		</div>
 	</div>
 	<!--/Countdown-->
+	<!--Weather post-->
+	<h1>Cảnh báo bão số 6</h1>
+	Theo dõi trực tiếp đường đi của bão số 6 đang diễn biến phức tạp trên biển Đông
+	<hr>
+	<script type='text/javascript' src='http://www.meteoearth.com/service/me.js'></script><div id='meDiv' style='width:500px;height:380px;background:#000;position:relative'></div><script type='text/javascript'>var meConfig={div:document.getElementById('meDiv'),viewSettings:{longitude: 109.5354,latitude: 15.6986,zoom:10.6196,is3DEnabled:true,isLightingEnabled:false, isTropicalStormEnabled:true}};me_createView(meConfig);</script>
+	<!--/Weather-->
 	</div>
       </div>
     </div>
