--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             </a>
         </div>
 
-        <div class="grid_item item_2" style="background-image: url(/images/home/movie-covers-small.jpg)">
+        <div class="grid_item item_2" style="background-image: url(images/home/bg2.jpg)">
             <a class="content" href="#">
                 <div class="content-inside">
-                    <p>Loading...</p>
+                    <p>Hướng dẫn giả lập tay cầm chơi game</p>
                 </div>
             </a>
         </div>
