--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <div class="grid_item item_2" style="background-image: url(images/home/bg2.jpg)">
-            <a class="content" href="#">
+            <a class="content" href="posts/2019-11-08/">
                 <div class="content-inside">
                     <p>Hướng dẫn giả lập tay cầm chơi game</p>
                 </div>
