--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
             </a>
         </div>
 
-      <div class="grid_item item_3" style="background-image: url(/images/home/cincy-dogs.jpg)">
-        <a class="content" href="#">
+      <div class="grid_item item_3" style="background-image: url(/images/home/bg3.jpg)">
+        <a class="content" href="posts/2019-11-14/">
           <div class="content-inside">
-            <p>Loading...</p>
+            <p>Vì sao người ta sẵn sàng xếp hàng mua một cục gạch Supreme?</p>
           </div>
         </a>
       </div>
