--- a/about/index.html
+++ b/about/index.html
@@ -77,7 +77,7 @@
 <h1>Xin chào. Tôi là Vinh</h1>
 
 <p>
-Trang này là kết quả của những băn khoan, những câu hỏi của tôi về mọi lĩnh vực. Để đi đến câu trả lời là cả một quá trình. Tôi ghi lại những câu trả lời hoặc câu chuyện hoặc các thông tin vụn vặt hoặc những câu hỏi :D. 
+Trang này là kết quả của những băn khoăn, những câu hỏi của tôi về mọi lĩnh vực. Để đi đến câu trả lời là cả một quá trình. Tôi ghi lại những câu trả lời hoặc câu chuyện hoặc các thông tin vụn vặt hoặc những câu hỏi :D. 
 Đúng sai rất khó phân định nhưng chắc chắn mọi điều sẽ có giá trị của riêng nó. Hy vọng người đọc có thể thu được giá trị gì đó hoặc cùng tôi phát triển những thứ vụn vặt này lên.
 </p>
 
